--- a/style.css
+++ b/style.css
@@ -1,25 +1,54 @@
-#check {
-    display: inline-block;
-    height: 25px;
-    width: 15px;
-    border-bottom: 4px solid #78b13f;
-    border-right: 4px solid #78b13f;
-    transform: rotate(45deg);
-    margin-left: 30px;
-    margin-bottom: 15px;
+#tick {
+  display: inline-block;
+  height: 25px;
+  width: 15px;
+  border-bottom: 6px solid #78b13f;
+  border-right: 6px solid #78b13f;
+  transform: rotate(45deg);
+  margin-left: 30px;
+  margin-bottom: 15px;
 }
-#totalScore{
-    font-family: "Rocher";
-    text-align: center;
-    font-size: 50px;
-    height: 50vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  @font-face {
-    font-family: "Rocher";
-    src: url(https://assets.codepen.io/9632/RocherColorGX.woff2);
-  }
-  
+#cross {
+  display: inline-block;
+  position: relative;
+  left: -30px;
+  height: 30px; 
+  width: 30px; 
+  flex-direction: column;
+  justify-content: center;
+}
+#cross::before,
+#cross::after {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 6px;
+  background-color: red;
+}
+#cross::before {
+  transform: rotate(45deg);
+}
+#cross::after {
+  transform: rotate(-45deg);
+}
+.text{
+  position: absolute;
+  left: 350px;
+  top: 100px;
+  display: inline-block;
+}
+
+#totalScore {
+  font-family: "Rocher";
+  text-align: center;
+  font-size: 50px;
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+@font-face {
+  font-family: "Rocher";
+  src: url(https://assets.codepen.io/9632/RocherColorGX.woff2);
+}
